fix background color

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -181,7 +181,7 @@ header {
 
 .about-blurb {
   padding: 40px 0;
-  baclground: white;
+  background: white;
   position: relative;
 
   .inner-blurb {
