--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -321,3 +321,49 @@ header {
     }
   }
 }
+
+//footer
+footer {
+  .featured-companies {
+    background: $black;
+    height: 200px;
+    display: flex;
+    align-items: center;
+
+    .container {
+      ul {
+        display: flex;
+        justify-content: space-around;
+        padding: 0;
+        align-items: center;
+        flex-direction: row;
+
+        li {
+          text-align: center;
+
+          img {
+            width: 50%;
+          }
+        }
+      }
+    }
+  }
+  .footer {
+    background: $off-white;
+    height: 80px;
+
+    .inner {
+      padding: 0 120px;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .socials {
+        a {
+          margin: 0 8px;
+        }
+      }
+    }
+  }
+}
